--- a/src/backend/community-service/build.gradle
+++ b/src/backend/community-service/build.gradle
@@ -26,16 +26,26 @@ ext {
 	set('springCloudVersion', "2023.0.0")
 }
 
+task copyPrivate(type: Copy) {
+	copy {
+		from './remember-community-private-env'
+		include "*.yml", "*.properties"
+		into 'src/main/resources'
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+//	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
+	implementation 'com.google.guava:guava:31.0.1-jre'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 }
 
 dependencyManagement {
