feat: ErrorCode 설정 및 JwtService 구현

--- a/src/backend/user-service/appsettings.json
+++ b/src/backend/user-service/appsettings.json
@@ -14,7 +14,7 @@
     "ValidAudience": "http://localhost:5000",
     "ValidIssuer": "http://localhost:5000",
     "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
-    "TokenValidityInMinutes": 1,
-    "RefreshTokenValidityInDays": 7
+    "AccessTokenValidityInSecond": 300, // 5분
+    "RefreshTokenValidityInSecond": 86400 // 24시간
   },
 }
