feat: 의존성 주입 체크 및 Email 전송 구현

--- a/src/backend/user-service/.gitignore
+++ b/src/backend/user-service/.gitignore
@@ -299,4 +299,6 @@ obj/
 .history
 .ionide
 
+secretconfig.json
+
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotnetcore,aspnetcore
