--- a/src/backend/user-service/user-service.csproj
+++ b/src/backend/user-service/user-service.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.25"/>
     <PackageReference Include="StackExchange.Redis" Version="2.7.10"/>
     <PackageReference Include="MailKit" Version="4.3.0"/>
+    <PackageReference Include="SmtpServer" Version="10.0.1"/>
   </ItemGroup>
 </Project>
