fix: StringRedisRepository를 AuthRedisRepository로 변경

--- a/src/backend/user-service/UserService/appsettings.json
+++ b/src/backend/user-service/UserService/appsettings.json
@@ -16,5 +16,8 @@
     "Secret": "JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr",
     "AccessTokenValidityInSecond": 60, // 1분
     "RefreshTokenValidityInSecond": 86400 // 24시간
+  },
+  "Friend":{
+    "MaxFriendReuqestTime": 86400, // 24시간
   }
 }
