--- a/src/backend/user-service/.gitignore
+++ b/src/backend/user-service/.gitignore
@@ -300,5 +300,6 @@ obj/
 .ionide
 
 secretconfig.json
+smilegate-recamp-project-efa22199ffa9.json
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotnetcore,aspnetcore
