--- a/src/backend/api-gateway/ApiGatewayCore/TestConfig.yaml
+++ b/src/backend/api-gateway/ApiGatewayCore/TestConfig.yaml
@@ -15,6 +15,8 @@ listeners:
       url: /api/user/auth/validate-token
       success-status: 
         - "200"
+  disallow-headers:
+    - trace-id
 
 clusters:
 - services:
