--- a/src/backend/chat-service/build.gradle
+++ b/src/backend/chat-service/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -50,4 +52,16 @@ task copyPrivate(type: Copy) {
 		include "*.yml", "*.properties", "*.json"
 		into 'src/main/resources'
 	}
+}
+
+ext {
+	set('springCloudVersion', "2023.0.0")
+}
+
+dependencyManagement {
+
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+
 }
