feat : git submodule 적용

--- a/src/backend/state-service/stateservice/build.gradle
+++ b/src/backend/state-service/stateservice/build.gradle
@@ -53,3 +53,11 @@ dependencyManagement {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+task copyPrivate(type: Copy) {
+	copy {
+		from './harmony-private-state'
+		include "*.yml", "*.properties", "*.json"
+		into 'src/main/resources'
+	}
+}
