--- a/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
+++ b/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
@@ -7,5 +7,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="13.7.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25"/>
   </ItemGroup>
 </Project>
