--- a/src/backend/api-gateway/ApiGatewayCore/TestConfig.yaml
+++ b/src/backend/api-gateway/ApiGatewayCore/TestConfig.yaml
@@ -10,11 +10,13 @@ listeners:
     - auth-service
   authorization:
     type: JWT
-      jwt-validator:
-      cluster-name: auth-service
-      url: /api/user/auth/validate-token
-      success-status: 
-        - "200"
+    jwt-validator:
+      path: /api/user/auth/login
+      valid-audience: http://localhost:5000
+      valid-issuer: http://localhost:5000
+      secret: JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr
+      access-token-validity-in-second: 60
+      access-refresh-token-validity-in-second: 86400
   disallow-headers:
     - trace-id
   thread-count: 1
