--- a/src/backend/api-gateway/ApiGatewayCore/ApiGatewayConfig.yaml
+++ b/src/backend/api-gateway/ApiGatewayCore/ApiGatewayConfig.yaml
@@ -14,9 +14,9 @@ listeners:
       path: /api/user/auth/login
       valid-audience: http://localhost:5000
       valid-issuer: http://localhost:5000
-      secret: JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr
+      secret-key: JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr
       access-token-validity-in-second: 60
-      access-refresh-token-validity-in-second: 86400
+      refresh-token-validity-in-second: 86400
   disallow-headers:
     - trace-id
   thread-count: 1
