refactor: Filter 구조 변경 및 Adapater 추가

--- a/src/backend/api-gateway/ApiGatewayCore/ApiGatewayConfig.yaml
+++ b/src/backend/api-gateway/ApiGatewayCore/ApiGatewayConfig.yaml
@@ -5,7 +5,7 @@ listeners:
     address: 127.0.0.1
     port: 4000
   route-config:
-    services:
+    clusters:
     - user-service
     - auth-service
   authorization:
