--- a/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
+++ b/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
@@ -8,5 +8,6 @@
   <ItemGroup>
     <PackageReference Include="YamlDotNet" Version="13.7.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25"/>
+    <PackageReference Include="StackExchange.Redis" Version="2.7.17"/>
   </ItemGroup>
 </Project>
