refactor: .gitignore 수정

--- a/src/backend/chat-service/build.gradle
+++ b/src/backend/chat-service/build.gradle
@@ -50,7 +50,7 @@ task copyPrivate(type: Copy) {
 	copy {
 		from './harmony-private-env'
 		include "*.yml", "*.properties", "*.json"
-		into 'src/main/resources/private'
+		into 'src/main/resources'
 	}
 }
 
