refactor: DefaultInstance 분리 및 구조 변경

--- a/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
+++ b/src/backend/api-gateway/ApiGatewayCore/ApiGatewayCore.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="YamlDotNet" Version="13.7.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25"/>
     <PackageReference Include="StackExchange.Redis" Version="2.7.17"/>
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.25"/>
   </ItemGroup>
 </Project>
