--- a/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
+++ b/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
@@ -1,13 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="YamlDotNet" Version="13.7.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25"/>
-    <PackageReference Include="StackExchange.Redis" Version="2.7.17"/>
-    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.25"/>
+    <ProjectReference Include="..\SmileGatewayCore\SmileGatewayCore.csproj" />
   </ItemGroup>
+
 </Project>
