--- a/src/backend/user-service/UserService/user-service.csproj
+++ b/src/backend/user-service/UserService/user-service.csproj
@@ -13,5 +13,6 @@
     <PackageReference Include="MailKit" Version="4.3.0"/>
     <PackageReference Include="SmtpServer" Version="10.0.1"/>
     <PackageReference Include="Google.Cloud.Storage.V1" Version="4.7.0"/>
+    <PackageReference Include="Castle.Core" Version="5.1.1"/>
   </ItemGroup>
 </Project>
