--- a/src/backend/api-gateway/SmileGateway/ApiGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/ApiGatewayConfig.yaml
@@ -8,6 +8,9 @@ listeners:
     clusters:
     - user-service
     - auth-service
+  custom-filters:
+    - name: CustomFilter
+      path: /ApiGateway/CustomFilter.cs
   authorization:
     type: JWT
     login-path: /api/user/auth/login
@@ -30,8 +33,8 @@ clusters:
         port: 5000
     prefix: /api/user/auth
     custom-filter:
-      name: CustomFilter
-      path: /ApiGateway/CustomFilter.cs
+      - name: CustomFilter
+        path: /ApiGateway/CustomFilter.cs
     connect-timeout: 5s
     authorization: false
 
@@ -51,8 +54,8 @@ clusters:
         port: 6000
     prefix: /api/community
     custom-filter:
-      name: CustomFilter
-      path: /ApiGateway/CustomFilter.cs
+      - name: CustomFilter
+        path: /ApiGateway/CustomFilter.cs
     connect-timeout: 5s
     authorization: true
 
