--- a/src/backend/media-service/server/Dockerfile
+++ b/src/backend/media-service/server/Dockerfile
@@ -16,5 +16,6 @@ COPY . .
 # Nesjs build
 RUN npm run build
 
-# Expose port 5000
 EXPOSE 5000
+# mediasoup worker가 사용할 RTP 포트 범위를 expose합니다.
+EXPOSE 2000-2020
