--- a/src/backend/media-service/server/package.json
+++ b/src/backend/media-service/server/package.json
@@ -27,7 +27,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/platform-socket.io": "^10.3.0",
     "@nestjs/swagger": "^7.1.11",
     "@nestjs/websockets": "^10.3.0",
@@ -38,6 +38,8 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express-basic-auth": "^1.2.1",
+    "fs-extra": "^11.2.0",
+    "mediasoup": "^3.13.16",
     "mongoose": "^7.5.1",
     "nest-winston": "^1.9.4",
     "passport": "^0.6.0",
