--- a/src/backend/api-gateway/SmileGatewayCore/SmileGatewayCore.csproj
+++ b/src/backend/api-gateway/SmileGatewayCore/SmileGatewayCore.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.25"/>
     <PackageReference Include="StackExchange.Redis" Version="2.7.17"/>
     <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="6.0.25"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
   </ItemGroup>
 </Project>
