--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -1,10 +1,10 @@
-log-path: /ApiGateway/Logs
+log-path: ../ApiGateway/Logs
 
 listeners:
 - name: listener1
   protocol: 
   address:
-    address: 10.99.29.133
+    address: 127.0.0.1
     port: 4000
   route-config:
     clusters:
