--- a/src/backend/user-service/UserService/Properties/launchSettings.json
+++ b/src/backend/user-service/UserService/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:46955",
+      "applicationUrl": "http://10.99.29.133:46955",
       "sslPort": 44326
     }
   },
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7043;http://localhost:5000",
+      "applicationUrl": "https://10.99.29.133:7043;http://10.99.29.133:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
