--- a/src/backend/user-service/UserService/appsettings.json
+++ b/src/backend/user-service/UserService/appsettings.json
@@ -7,13 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQLConnection": "Server=127.0.0.1,1433;Database=TestDB;User Id=sa;Password=test1234!;",
-    "RedisConnection": "127.0.0.1:6379"
+    "MSSQLConnection": "Server=mssql;Database=UserDB;User Id=sa;Password=test1234!;",
+    "RedisConnection": "redis:6379"
   },
   "Friend":{
     "MaxFriendReuqestTime": 86400, // 24시간
   },
   "Logger":{
-    "LogPath": "\\logs.txt",
+    "LogPath": "/var/log/info.log",
   }
 }
