--- a/src/backend/user-service/UserService/Dockerfile.userservice
+++ b/src/backend/user-service/UserService/Dockerfile.userservice
@@ -7,7 +7,8 @@ ENV ASPNETCORE_URLS=http://*:5000
 # Creates a non-root user with an explicit UID and adds permission to access the /app folder
 # For more info, please refer to https://aka.ms/vscode-docker-dotnet-configure-containers
 
-RUN chmod o+w /var/log
+RUN chmod 777 /var/log
+RUN chmod 777 /var
 
 RUN adduser -u 5678 --disabled-password --gecos "" appuser && chown -R appuser /app
 USER appuser
