feat: Exception들 추가

--- a/src/backend/api-gateway/.gitignore
+++ b/src/backend/api-gateway/.gitignore
@@ -300,5 +300,6 @@ obj/
 .ionide
 
 secretconfig.json
+Logs.txt
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotnetcore,aspnetcore
