--- a/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
+++ b/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+
+    <OutputPath>.\bin\SmileGateway\</OutputPath>
     <TargetFramework>net6.0</TargetFramework>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+
+    <OutputType>Exe</OutputType>
+
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
