--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -1,16 +1,16 @@
-log-path: ../ApiGateway/Logs
+log-path: Logs.txt
 
 listeners:
 - name: listener1
   protocol: 
   address:
-    address: 127.0.0.1
+    address: 10.99.29.133
     port: 4000
   route-config:
     clusters:
     - user-service
     - auth-service
-    - community-service
+    # - community-service
   custom-filters:
     - name: ListenerTestFilter
       path: /ApiGateway/CustomFilter.cs
@@ -32,7 +32,7 @@ clusters:
   - name: auth-service
     protocol: http
     address:
-      - address: 127.0.0.1
+      - address: 10.99.29.133
         port: 5000
     prefix: /api/auth
     custom-filters:
@@ -44,30 +44,30 @@ clusters:
   - name: user-service
     protocol: http
     address:
-      - address: 127.0.0.1
+      - address: 10.99.29.133
         port: 5000
     prefix: /api/user
     connect-timeout: 5s
     authorization: true
 
-  - name: community-service
-    protocol: http
-    address:
-      - address: 10.99.19.2
-        port: 8000
-    prefix: /api/community
-    custom-filters:
-      - name: ClusterTestFilter
-        path: /ApiGateway/ClusterTestFilter.cs
-    connect-timeout: 5s
-    authorization: true
+  # - name: community-service
+  #   protocol: http
+  #   address:
+  #     - address: 10.99.19.2
+  #       port: 8000
+  #   prefix: /api/community
+  #   custom-filters:
+  #     - name: ClusterTestFilter
+  #       path: /ApiGateway/ClusterTestFilter.cs
+  #   connect-timeout: 5s
+  #   authorization: true
 
-  - name: chat-service
-    protocol: http
-    address:
-      - address: 127.0.0.1
-        port: 7000
-    prefix: /service2
-    custom-filters: 
-    connect-timeout: 5s
-    authorization: true
+  # - name: chat-service
+  #   protocol: http
+  #   address:
+  #     - address: 127.0.0.1
+  #       port: 7000
+  #   prefix: /service2
+  #   custom-filters: 
+  #   connect-timeout: 5s
+  #   authorization: true
