fix: Multipart 에러 해결, 무슨 문제인지는 모르겠음..

--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -4,7 +4,7 @@ listeners:
 - name: listener1
   protocol: 
   address:
-    address: 127.0.0.1
+    address: 10.99.29.133
     port: 4000
   route-config:
     clusters:
@@ -33,7 +33,7 @@ clusters:
   - name: auth-service
     protocol: http
     address:
-      - address: 127.0.0.1
+      - address: 10.99.29.133
         port: 5000
     prefix: /api/auth
     custom-filters:
@@ -45,7 +45,7 @@ clusters:
   - name: user-service
     protocol: http
     address:
-      - address: 127.0.0.1
+      - address: 10.99.29.133
         port: 5000
     prefix: /api/user
     connect-timeout: 5s
@@ -63,12 +63,12 @@ clusters:
   #   connect-timeout: 5s
   #   authorization: true
 
-  # - name: chat-service
-  #   protocol: http
-  #   address:
-  #     - address: 10.99.14.176
-  #       port: 7000
-  #   prefix: /api/chat-service
-  #   custom-filters: 
-  #   connect-timeout: 5s
-  #   authorization: false
+  - name: chat-service
+    protocol: http
+    address:
+      - address: 10.99.14.176
+        port: 7000
+    prefix: /api/chat-service
+    custom-filters: 
+    connect-timeout: 5s
+    authorization: false
