--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,12 +11,13 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "zustand": "^4.5.0"
   },
   "proxy": "http://localhost:8000",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
