--- a/src/backend/community-service/build.gradle
+++ b/src/backend/community-service/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.4.14'
     implementation group: 'org.fluentd', name: 'fluent-logger', version: '0.3.4'
     implementation group: 'com.sndyuk', name: 'logback-more-appenders', version: '1.5.6'
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
 }
 
 dependencyManagement {
