feat: UserService 李먮쭑..?

--- a/src/backend/user-service/UserService/appsettings.json
+++ b/src/backend/user-service/UserService/appsettings.json
@@ -9,11 +9,14 @@
   "ConnectionStrings": {
     "MSSQLConnection": "Server=mssql;Database=UserDB;User Id=sa;Password=test1234!;",
     "RedisConnection": "redis:6379"
+    // "MSSQLConnection": "Server=127.0.0.1,1433;Database=UserDB;User Id=sa;Password=test1234!;",
+    // "RedisConnection": "127.0.0.1:6379"
   },
   "Friend":{
     "MaxFriendReuqestTime": 86400, // 24시간
   },
   "Logger":{
     "LogPath": "/var/log/info.log",
+    // "LogPath": "info.log",
   }
 }
