--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -4,26 +4,26 @@ listeners:
 - name: listener1
   protocol: 
   address:
-    address: 10.99.29.133
+    address: 127.0.0.1
     port: 4000
   route-config:
     clusters:
     - user-service
     - auth-service
     # - community-service
-    - chat-service
+    # - chat-service
   custom-filters:
     - name: ListenerTestFilter
       path: /ApiGateway/CustomFilter.cs
   authorization:
     type: JWT
     login-path: /api/auth/login
-    logout-path: /api/auth/logout
+    logout-path: /api/user/logout
     jwt-validator:
-      valid-audience: http://10.99.29.133:4000
-      valid-issuer: http://10.99.29.133:4000
+      valid-audience: http://127.0.0.1:4000
+      valid-issuer: http://127.0.0.1:4000
       secret-key: JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr
-      access-token-validity-in-second: 60
+      access-token-validity-in-second: 60000
       refresh-token-validity-in-second: 86400
   disallow-headers:
     - trace-id
@@ -33,7 +33,7 @@ clusters:
   - name: auth-service
     protocol: http
     address:
-      - address: 10.99.29.133
+      - address: 127.0.0.1
         port: 5000
     prefix: /api/auth
     custom-filters:
@@ -45,7 +45,7 @@ clusters:
   - name: user-service
     protocol: http
     address:
-      - address: 10.99.29.133
+      - address: 127.0.0.1
         port: 5000
     prefix: /api/user
     connect-timeout: 5s
@@ -63,12 +63,12 @@ clusters:
   #   connect-timeout: 5s
   #   authorization: true
 
-  - name: chat-service
-    protocol: http
-    address:
-      - address: 10.99.14.176
-        port: 7000
-    prefix: /api/chat-service
-    custom-filters: 
-    connect-timeout: 5s
-    authorization: false
+  # - name: chat-service
+  #   protocol: http
+  #   address:
+  #     - address: 10.99.14.176
+  #       port: 7000
+  #   prefix: /api/chat-service
+  #   custom-filters: 
+  #   connect-timeout: 5s
+  #   authorization: false
