refactor: 폴더 구조 변경

--- a/src/backend/user-service/.gitignore
+++ b/src/backend/user-service/.gitignore
@@ -301,5 +301,5 @@ obj/
 
 secretconfig.json
 smilegate-recamp-project-efa22199ffa9.json
-
+logs.txt
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,dotnetcore,aspnetcore
