feat: 각 서버와의 연동 기능 추가

--- a/src/backend/user-service/appsettings.json
+++ b/src/backend/user-service/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "AllowedHosts": "*",
+  "DefaultProfileImage": "https://storage.googleapis.com/remember-harmony/d68c3d6c-4683-4ddf-892b-8a73e3678145",
   "ConnectionStrings": {
     // "MSSQLConnection": "Server=mssql;Database=UserDB;User Id=sa;Password=test1234!;",
     // "RedisConnection": "redis:6379"
@@ -14,6 +15,10 @@
   },
   "Friend":{
     "MaxFriendReuqestTime": 86400, // 24시간
+  },
+  "OutService":{
+    "Community": "http://34.22.109.45:8000/api/community/",
+    "State": "http://34.22.109.45:9000/api/state/"
   },
   "Logger":{
     // "LogPath": "/var/log/info.log",
