fix: ErrorCodeAuth 수정

--- a/src/backend/user-service/appsettings.json
+++ b/src/backend/user-service/appsettings.json
@@ -8,10 +8,8 @@
   "AllowedHosts": "*",
   "DefaultProfileImage": "https://storage.googleapis.com/remember-harmony/d68c3d6c-4683-4ddf-892b-8a73e3678145",
   "ConnectionStrings": {
-    // "MSSQLConnection": "Server=mssql;Database=UserDB;User Id=sa;Password=test1234!;",
-    // "RedisConnection": "redis:6379"
-    "MSSQLConnection": "Server=127.0.0.1,1433;Database=UserDB;User Id=sa;Password=test1234!;",
-    "RedisConnection": "127.0.0.1:6379"
+    "MSSQLConnection": "Server=34.22.109.45,11433;Database=UserDB;User Id=sa;Password=test1234!;",
+    "RedisConnection": "34.22.109.45:56379"
   },
   "Friend":{
     "MaxFriendReuqestTime": 86400, // 24시간
@@ -21,7 +19,7 @@
     "State": "http://34.22.109.45:9000/api/state/"
   },
   "Logger":{
-    // "LogPath": "/var/log/info.log",
-    "LogPath": "info.log",
+    "LogPath": "/var/log/info.log",
+    // "LogPath": "info.log",
   }
 }
