--- a/src/backend/media-service/server/package.json
+++ b/src/backend/media-service/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/microservices": "^10.3.3",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.3.0",
@@ -39,6 +40,7 @@
     "dotenv": "^16.3.1",
     "express-basic-auth": "^1.2.1",
     "fs-extra": "^11.2.0",
+    "kafkajs": "^2.2.4",
     "mediasoup": "^3.13.16",
     "mongoose": "^7.5.1",
     "nest-winston": "^1.9.4",
