feat: SmileGateway 배포 준비

--- a/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
+++ b/src/backend/api-gateway/SmileGateway/SmileGateway.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="SmileGatewayConfig.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
     <ProjectReference Include="..\SmileGatewayCore\SmileGatewayCore.csproj" />
   </ItemGroup>
 
