feat: 소켓 설정 변경(딜레이 제거 설정)

--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -10,8 +10,8 @@ listeners:
     clusters:
     - user-service
     - auth-service
-    # - community-service
-    # - chat-service
+    - community-service
+    - chat-service
   custom-filters:
     - name: ListenerTestFilter
       path: /ApiGateway/CustomFilter.cs
