fix: ErrorCode 변경

--- a/src/backend/api-gateway/SmileGatewayCore/SmileGatewayCore.csproj
+++ b/src/backend/api-gateway/SmileGatewayCore/SmileGatewayCore.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Content Include="Utils/Error/ErrorCode.json">
+      <Link>ErrorCode.json</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
