feat: reactor 서비스

--- a/src/backend/user-service/appsettings.json
+++ b/src/backend/user-service/appsettings.json
@@ -19,7 +19,7 @@
     "State": "http://34.22.109.45:9000/api/state/"
   },
   "Logger":{
-    "LogPath": "/var/log/info.log",
-    // "LogPath": "info.log",
+    // "LogPath": "/var/log/info.log",
+    "LogPath": "info.log",
   }
 }
