--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -21,7 +21,7 @@
   },
   "proxy": "http://localhost:8000",
   "scripts": {
-    "start": "set HTTPS=false&&react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
