--- a/src/frontend/.env
+++ b/src/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_MEDIA_URL=http://localhost:6001
-# REACT_APP_MEDIA_URL=https://0chord.store
+# REACT_APP_MEDIA_URL=http://localhost:6001
+REACT_APP_MEDIA_URL=https://0chord.store
+# REACT_APP_MEDIA_URL=https://34.22.109.45:6001
