--- a/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
+++ b/src/backend/api-gateway/SmileGateway/SmileGatewayConfig.yaml
@@ -1,8 +1,8 @@
 log-path: Logs.txt
 
 listeners:
-- name: listener1
-  protocol: 
+- name: Outside
+  protocol: "HTTP/1.0"
   address:
     address: 0.0.0.0
     port: 4000
@@ -25,8 +25,24 @@ listeners:
       secret-key: JWTRefreshTokenHIGHsecuredPasswordVVVp1OH7Xzyr
       access-token-validity-in-second: 230400 #64 hours
       refresh-token-validity-in-second: 230400 # 64 hours
+  is-inside: false
   disallow-headers:
     - trace-id
+  thread-count: 10
+
+- name: Inside
+  protocol: "HTTP/1.0"
+  address:
+    address: 0.0.0.0
+    port: 4040
+  route-config:
+    clusters:
+    - user-service
+    - auth-service
+    - community-service
+    - chat-service
+  is-inside: true
+  disallow-headers:
   thread-count: 10
 
 clusters:
