--- a/src/backend/community-service/build.gradle
+++ b/src/backend/community-service/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
+    id "org.sonarqube" version "5.0.0.4638"
 }
 
 group = 'harmony'
